feat: add material import normalization
